[metadata]
name = nezha
version = 2013.1
summary = Simple Manage Framwork
description-file =
    README.md
author = Larry John
author-email = zileiye@gmail.com
home-page = http://github.com/LarryZhangy/nezha.git
classifier =
    Environment :: Nezha
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = 
    nezha
scripts = 
    bin/nezha
    bin/nezha-api
    bin/nezha-manage

[entry_points]
nezha.api.handles.extensions =
    Ips = nezha.api.handles.extensions.ips:Ips

[nosetests]
verbosity=2
tests=nezha/tests
cover-package = nezha
cover-erase = true
